# xel-miner

./: .gitignore  CMakeLists.txt  Empty_Template.epl  README.md  cmake_mac.sh  compile_dll.bat  elist.h  epl-language-notes.md  miner.h  ocl.c  release.sh  test_sn.java  util.c  xel_compiler.c  xel_miner.c  xel_supernode.c  xel_validate.c
ElasticPL/: CMakeLists.txt  ElasticPL Language Notes.txt  ElasticPL.c  ElasticPL.h  ElasticPLConvert.c  ElasticPLFunctions.h  ElasticPLInterpreter.c  ElasticPLMath.c  ElasticPLParser.c  ElasticPLTokenManager.c
compat/: winansi.c
compat/jansson/: jansson.h  utf.h
compat/jansson_old/: CMakeLists.txt
crypto/: curve25519-donna.c  sha2.c  sha2.h
docker/: Dockerfile  start-miner.sh
examples/: Empty_Template.epl  SHA256_BTC.epl  TSP_ATT48_BF.epl  TSP_ATT48_BF.pl  TSP_ATT48_SA.pl
work/: EMPTY  README.md
